<resources>
    <string name="app_name">AudioPhile</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? SIGN UP</string>
    <string name="logo">logo</string>
    <string name="go">GO</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="full_name">Full Name</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_up_to_start_your_new_journey">Sign Up to start your new Journey</string>
    <string name="already_have_an_account_login">Already have an account? LOG IN</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="next_btn">Next</string>
    <string name="forget_password_detail">Provide your account email for which you want to reset your password</string>
    <string name="login">Login</string>
    <string name="password_updated_success_message">Your password has been updated successfully!</string>
    <string name="password_updated">Password\n updated</string>
    <string name="verify_code">VERIFY CODE</string>
    <string name="icon">icon</string>
    <string name="otp_code_text">CODE</string>
    <string name="otp_verification_text">VERIFICATION</string>
    <string name="otp_description_text">Enter OTP sent to the provided account Email Address or Phone Number</string>
    <string name="make_selection">MAKE SELECTION</string>
    <string name="make_selection_detail">Select the contact detail that we should use to send a verification code for resetting your password</string>
    <string name="via_sms">Via SMS</string>
    <string name="via_mail">Via Email</string>
    <string name="new_credentials">NEW \n CREDENTIALS</string>
    <string name="new_credentials_detail">Your identity has been verified!\n Please set your new password</string>
    <string name="home">Home</string>
    <string name="timeline">Timeline</string>
    <string name="create">Create</string>
    <string name="discover">Discover</string>
    <string name="more">More</string>
    <string name="notification">Notification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>