<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:padding="20dp">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/logo_json"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginVertical="30dp"
        android:layout_gravity="center_horizontal"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/music" />

    <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="30sp"
            android:transitionName="logo_text"
            android:fontFamily="@font/blantik"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:id="@+id/slogan_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_continue"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/profile"
                app:startIconTint="@color/colorPrimaryDark"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimaryDark"
                app:hintTextColor="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/lock"
                app:startIconTint="@color/colorPrimaryDark"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorPrimaryDark"
                app:hintTextColor="@color/colorPrimaryDark">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorPrimaryDark" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/forgot_pass"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="end"
                android:letterSpacing="0"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button"
                android:text="@string/go"
                android:backgroundTint="@color/colorAccent"
                android:textColor="#fff"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <Button
                android:id="@+id/login_register_instead"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="#00000000"
                android:elevation="0dp"
                android:letterSpacing="0"

                android:text="@string/don_t_have_an_account_sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>