<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".PassUpdatedActivity">

    <TextView
        android:id="@+id/success_message_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:fontFamily="@font/flinton"
        android:gravity="center"
        android:text="@string/password_updated"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:textStyle="bold" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ok_json"
        android:layout_width="402dp"
        android:layout_height="200dp"
        android:layout_marginVertical="50dp"
        android:layout_gravity="center_horizontal"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/ok" />



    <TextView
        android:id="@+id/success_message_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli_regular"
        android:gravity="center"
        android:text="@string/password_updated_success_message"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />


    <Button
        android:id="@+id/success_message_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/login"
        android:textColor="@color/light_pink" />


</LinearLayout>