<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="30dp"
    tools:context=".AccEmailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/forget_password_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="5dp"
            android:src="@drawable/general_back_icon" />


        <ImageView
            android:id="@+id/forget_password_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:src="@drawable/password" />


        <TextView
            android:id="@+id/forget_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/flinton"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="36sp" />


        <TextView
            android:id="@+id/forget_password_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_regular"
            android:gravity="center"
            android:text="@string/forget_password_detail"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/forget_password_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/colorPrimary"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/email"
                app:startIconTint="@color/white">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forgetPassEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli_regular"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/forget_password_next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forget_password_email"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorAccent"

                android:text="@string/next_btn"
                android:textColor="@color/white" />


        </RelativeLayout>
    </LinearLayout>
</ScrollView>